Fix z-index with category select

--- a/src/Resources/public/src/scss/gutes_default/_list_filter.scss
+++ b/src/Resources/public/src/scss/gutes_default/_list_filter.scss
@@ -119,6 +119,9 @@
     display: none;
   }
 
+  .form-view__type-filter {
+    z-index: 10;
+  }
 
   .form-view__searchinput {
     max-width: 400px;
